--- a/app/public/index.html
+++ b/app/public/index.html
@@ -7,33 +7,49 @@
 <style>
   .roomies {
     list-style-type : none;
+    padding         : 0;
   }
 
   .roomies li {
-    display : inline;
-    padding : 5px 20px;
+    display       : inline;
+    padding-right : 20px;
   }
 
   .voted {
     background-color : palegreen;
   }
 
+  .result-area table {
+    margin-left  : auto;
+    margin-right : auto;
+  }
+
+  .num {
+    text-align: right;
+    font-family: "Courier New", Courier, monospace;
+  }
 
 </style>
 
-<div class="room-area">
-  <input id="name-input" type="text" name="name" placeholder="Your name here...">
-  <p>In the room:</p>
-  <ul class="roomies"></ul>
-</div>
-
-<div class="vote-area">
-  <input id="vote-input" type="text" name="num" placeholder="Your vote here...">
-  <button id="vote-button">Vote</button>
-</div>
-
-<div class="result-area">
-
+<div data-role="page">
+  <div data-role="header"><h1>Vote</h1></div>
+  <div role="main" class="ui-content">
+    <div class="room-area">
+      <ul class="roomies"></ul>
+    </div>
+    <div class="vote-area">
+      <input id="vote-input" type="text" name="num" placeholder="Your vote here...">
+      <button id="vote-button">Vote Now!</button>
+    </div>
+    <div class="result-area">
+    </div>
+  </div>
+  <div data-role="footer">
+    <div class="ui-grid-a">
+      <div class="ui-block-a" style="text-align: right; padding: 20px"><strong>You are:</strong></div>
+      <div class="ui-block-b"><input id="name-input" type="text" name="name" placeholder="Your name here..."></div>
+    </div>
+  </div>
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
@@ -106,12 +122,12 @@ $('#vote-button').on('tap', function (e) {
 
 
 socket.on('results', function (data) {
-  var html = '<table>';
+  var html = '<table data-role="table" class="ui-responsive"><thead><tr><th>Person</th><th>Vote</th></tr></thead><tbody>';
   $.each(data.users, function (k, v) {
     html += '<tr><td>' + v +
-    '</td><td>' + data.votes[k] + '</td></tr>';
+    '</td><td class="num">' + data.votes[k] + '</td></tr>';
   });
-  html += '</table>';
+  html += '</tbody></table>';
   $('.room-area').remove();
   $('.result-area').html(html);
 
