--- a/app/public/index.html
+++ b/app/public/index.html
@@ -135,10 +135,14 @@ socket.on('results', function (data) {
     sum += parseFloat(vote);
   });
   html += '<tfoot><tr><th>Total</th><th class="num">' + sum + '</th></tr>';
-  html += '<tr><th>Average</th><th class="num">' + (sum / Object.keys(data.users).length) + '</th></tr></tfoot>';
+  html += '<tr><th>Average</th><th class="num">' + (sum / Object.keys(data.users).length).toFixed(2) + '</th></tr></tfoot>';
   html += '</tbody></table>';
+  html += '<button id="again-button">Again!</button>';
   $('.room-area').remove();
   $('.result-area').html(html);
+  $('#again-button').on('tap', function (e) {
+    location.reload();
+  });
 
 });
 </script>
