--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,7 +13,7 @@
       <ul class="roomies"></ul>
     </div>
     <div class="vote-area">
-      <input id="vote-input" type="text" name="num" placeholder="Enter a number...">
+      <input id="vote-input" type="number" step="any" name="num" placeholder="Enter a number...">
       <button id="vote-button">Vote Now!</button>
     </div>
     <div class="result-area">
