Move toward using objects/classes node-side.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,6 +10,9 @@
   <div data-role="header"><h1>Vote</h1></div>
   <div role="main" class="ui-content">
     <div class="vote-area">
+
+      <!-- see this? http://andreruffert.github.io/rangeslider.js/-->
+
       <input id="vote-input" type="number" step="any" name="num" placeholder="Enter a number...">
       <button id="vote-button">Vote Now!</button>
     </div>
