Correctly show results as they come in.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,10 +9,10 @@
 <div data-role="page">
   <div data-role="header"><h1>BOSH</h1></div>
   <div role="main" class="ui-content">
-    <button id="new-vote-button" data-icon="plus">Create Vote</button>
+    <button id="new-vote-button" data-icon="plus">New Ballot</button>
     <div class="new-vote-area">
       <div class="ui-field-contain">
-        <label for="new-vote-name">Vote Name</label>
+        <label for="new-vote-name">Name</label>
         <input id="new-vote-name" value="" type="text" maxlength="20">
       </div>
       <div class="ui-grid-b">
@@ -35,7 +35,7 @@
           </div>
         </div>
       </div>
-      <button id="create-vote-button" data-icon="plus">Create Vote</button>
+      <button id="create-vote-button" data-icon="plus">Create Ballot</button>
       <button id="cancel-create-vote-button" data-icon="delete">Cancel</button>
     </div>
 
