--- a/app/public/index.html
+++ b/app/public/index.html
@@ -13,33 +13,33 @@
     <div class="new-vote-area">
       <div class="ui-field-contain">
         <label for="new-vote-name">Name</label>
-        <input id="new-vote-name" value="" type="text" maxlength="20">
+        <input id="new-vote-name" type="text" maxlength="20">
       </div>
       <div class="ui-grid-b">
         <div class="ui-block-a">
           <div class="ui-field-contain">
             <label for="new-vote-min">Min</label>
-            <input id="new-vote-min" value="" type="number" step="any">
+            <input id="new-vote-min" type="number" step="any">
           </div>
         </div>
         <div class="ui-block-b">
           <div class="ui-field-contain">
             <label for="new-vote-max">Max</label>
-            <input id="new-vote-max" value="" type="number" step="any">
+            <input id="new-vote-max" type="number" step="any">
           </div>
         </div>
         <div class="ui-block-c">
           <div class="ui-field-contain">
             <label for="new-vote-step">Step</label>
-            <input id="new-vote-step" value="" type="number" step="any">
+            <input id="new-vote-step" type="number" step="any">
           </div>
         </div>
       </div>
       <button id="create-vote-button" data-icon="plus">Create Ballot</button>
       <button id="cancel-create-vote-button" data-icon="delete">Cancel</button>
     </div>
+    <hr>
     <div class="vote-area"></div>
-    <div class="result-area"></div>
     <button id="again-button" data-icon="refresh">Same Again</button>
     <div class="room-area">
       <h2>Who's in the Room</h2>
