Vote/Poll terminology + sync polls on entering room.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -9,7 +9,7 @@
 <div data-role="page">
   <div data-role="header"><h1>BOSH</h1></div>
   <div role="main" class="ui-content">
-    <button id="new-vote-button" data-icon="plus">New Ballot</button>
+    <button id="new-vote-button" data-icon="plus">New Poll</button>
     <div class="new-vote-area">
       <div class="ui-field-contain">
         <label for="new-vote-name">Name</label>
@@ -35,7 +35,7 @@
           </div>
         </div>
       </div>
-      <button id="create-vote-button" data-icon="plus">Create Ballot</button>
+      <button id="create-vote-button" data-icon="plus">Create Poll</button>
       <button id="cancel-create-vote-button" data-icon="delete">Cancel</button>
     </div>
     <hr>
