DB, shared client/server code, multiple rooms - work in progress.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -38,7 +38,7 @@
           </div>
         </div>
       </div>
-      <button id="create-vote-button" data-theme="b">Create Poll</button>
+      <button id="create-poll-button" data-theme="b">Create Poll</button>
     </div>
     <div class="vote-area"></div>
     <div class="room-area" data-role="collapsible" data-collapsed="false">
@@ -56,4 +56,4 @@
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
 <script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-<script src="js/all.js"></script>
+<script src="js/vt.js"></script>
