--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,10 +3,10 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 
 <title>Voting Room</title>
-<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css">
+<link rel="stylesheet" href="/css/jquery.mobile-1.4.5.min.css">
 <link rel="stylesheet" href="/css/all.css">
-<script src="https://code.jquery.com/jquery-2.1.3.min.js"></script>
-<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+<script src="/js/jquery-2.1.3.min.js"></script>
+<script src="/js/jquery.mobile-1.4.5.min.js"></script>
 
 <div data-role="page">
 
