Start support for multiple rooms.

--- a/app/public/index.html
+++ b/app/public/index.html
@@ -10,42 +10,54 @@
 
 <div data-role="page">
 
-  <div data-role="header"><h1>BOSH</h1></div>
-
-  <div role="main" class="ui-content">
-    <div class="new-poll-area" data-role="collapsible">
-      <h2>New Poll</h2>
-
-      <div class="ui-field-contain">
-        <label for="new-vote-name">Name</label>
-        <input id="new-vote-name" type="text" maxlength="20" data-clear-btn="true">
-      </div>
-      <div class="ui-grid-b">
-        <div class="ui-block-a">
-          <div class="ui-field-contain">
-            <label for="new-vote-min">Min</label>
-            <input id="new-vote-min" type="number" step="any">
-          </div>
-        </div>
-        <div class="ui-block-b">
-          <div class="ui-field-contain">
-            <label for="new-vote-max">Max</label>
-            <input id="new-vote-max" type="number" step="any">
-          </div>
-        </div>
-        <div class="ui-block-c">
-          <div class="ui-field-contain">
-            <label for="new-vote-step">Step</label>
-            <input id="new-vote-step" type="number" step="any">
-          </div>
-        </div>
-      </div>
-      <button id="create-poll-button" data-theme="b">Create Poll</button>
-    </div>
-    <div class="vote-area"></div>
+  <div data-role="panel" id="vt-panel" data-display="overlay" data-position="right">
+    <label for="room-input">Room</label>
+    <input id="room-input" type="text" maxlength="20" data-clear-btn="true">
+    <button id="enter-room-button" data-theme="b">Enter Room</button>
     <div class="room-area" data-role="collapsible" data-collapsed="false">
       <h2>Who's in the Room</h2>
-      <ul data-role="listview" class="roomies" data-inset="true"></ul>
+      <ul data-role="listview" class="roomies"></ul>
+    </div>
+  </div>
+
+  <div data-role="header">
+    <h1>Voting Thing</h1>
+    <a href="#vt-panel" class="ui-btn-right" data-icon="bars" data-iconpos="notext" data-role="button"></a>
+  </div>
+
+  <div role="main" class="ui-content">
+    <div class="set-room-text-area">
+      Use the button at the top right to create a new room, or go to an existing one.
+    </div>
+    <div class="poll-and-votes-area">
+      <div class="new-poll-area" data-role="collapsible">
+        <h2>New Poll</h2>
+        <label for="new-vote-name">Name</label>
+        <input id="new-vote-name" type="text" maxlength="20" data-clear-btn="true">
+
+        <div class="ui-grid-b">
+          <div class="ui-block-a">
+            <div class="ui-field-contain">
+              <label for="new-vote-min">Min</label>
+              <input id="new-vote-min" type="number" step="any">
+            </div>
+          </div>
+          <div class="ui-block-b">
+            <div class="ui-field-contain">
+              <label for="new-vote-max">Max</label>
+              <input id="new-vote-max" type="number" step="any">
+            </div>
+          </div>
+          <div class="ui-block-c">
+            <div class="ui-field-contain">
+              <label for="new-vote-step">Step</label>
+              <input id="new-vote-step" type="number" step="any">
+            </div>
+          </div>
+        </div>
+        <button id="create-poll-button" data-theme="b">Create Poll</button>
+      </div>
+      <div class="vote-area"></div>
     </div>
   </div>
 
