--- a/app/public/index.html
+++ b/app/public/index.html
@@ -8,7 +8,7 @@
 <script src="/js/jquery-2.1.3.min.js"></script>
 <script src="/js/jquery.mobile-1.4.5.min.js"></script>
 
-<div data-role="page">
+<div data-role="page" class="not-setup">
 
   <div data-role="panel" id="vt-panel" data-display="overlay" data-position="right">
     <form id="enter-room-form">
@@ -24,12 +24,18 @@
 
   <div data-role="header">
     <h1>Voting Thing</h1>
-    <a href="#vt-panel" class="ui-btn-right" data-icon="bars" data-iconpos="notext" data-role="button"></a>
+    <a href="#vt-panel" class="hamburger ui-btn-right" data-icon="bars" data-iconpos="notext" data-role="button"></a>
   </div>
 
   <div role="main" class="ui-content">
-    <div class="set-room-text-area">
-      Use the button at the top right to create a new room, or go to an existing one.
+    <div class="setup-area">
+      <form id="setup-form">
+        <label for="setup-name">What is your name?</label>
+        <input id="setup-name" type="text" maxlength="20" data-clear-btn="true" required>
+        <label for="setup-room">What is your quest?</label>
+        <input id="setup-room" type="text" maxlength="20" data-clear-btn="true" placeholder="Room name" required>
+        <button data-theme="b">Enter</button>
+      </form>
     </div>
     <div class="poll-and-votes-area">
       <div class="new-poll-area" data-role="collapsible">
