--- a/app/public/index.html
+++ b/app/public/index.html
@@ -3,10 +3,10 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 
 <title>Voting Room</title>
-<link rel="stylesheet" href="/css/jquery.mobile-1.4.5.min.css">
-<link rel="stylesheet" href="/css/all.css">
-<script src="/js/jquery-2.1.3.min.js"></script>
-<script src="/js/jquery.mobile-1.4.5.min.js"></script>
+<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
+<link rel="stylesheet" href="css/all.css">
+<script src="js/jquery-2.1.3.min.js"></script>
+<script src="js/jquery.mobile-1.4.5.min.js"></script>
 
 <div data-role="page" class="not-setup">
 
@@ -32,7 +32,7 @@
       <form id="setup-form">
         <label for="setup-name">What is your name?</label>
         <input id="setup-name" type="text" maxlength="20" data-clear-btn="true" required>
-        <label for="setup-room">What is your quest?</label>
+        <label for="setup-room">What room do you want to go to?</label>
         <input id="setup-room" type="text" maxlength="20" data-clear-btn="true" placeholder="Room name" required>
         <button data-theme="b">Enter</button>
       </form>
@@ -87,5 +87,7 @@
 
 </div>
 
-<script src="/socket.io/socket.io.js"></script>
+<!--<script src="cordova.js"></script>-->
+
+<script src="js/socket.io.js"></script>
 <script src="js/vt.min.js"></script>
