--- a/www/index.html
+++ b/www/index.html
@@ -3,10 +3,8 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 
 <title>Voting Room</title>
-<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css">
-<link rel="stylesheet" href="css/all.css">
-<script src="js/jquery-2.1.3.min.js"></script>
-<script src="js/jquery.mobile-1.4.5.min.js"></script>
+<link rel="stylesheet" href="css/all.min.css">
+<script src="js/all.min.js"></script>
 
 <div data-role="page" class="not-setup">
 
@@ -86,8 +84,3 @@
   </div>
 
 </div>
-
-<!--<script src="cordova.js"></script>-->
-
-<script src="js/socket.io.js"></script>
-<script src="js/vt.min.js"></script>
