Hopefully fix xhr poll error, seems to sort of work on android 2.3

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
 
 <title>Voting Room</title>
 <link rel="stylesheet" href="css/all.min.css">
+<script src="cordova.js"></script>
 <script src="js/all.min.js"></script>
 
 <div data-role="page" class="not-setup">
