--- a/www/index.html
+++ b/www/index.html
@@ -17,7 +17,16 @@
     </form>
     <div class="room-area" data-role="collapsible" data-collapsed="false">
       <h2>Who's in the Room</h2>
-      <ul data-role="listview" class="roomies"></ul>
+      <ul data-role="listview" data-bind="foreach: people, jqmRefreshList: people">
+        <li data-icon="edit"><!-- data-bind="attr: {'data-icon1': is_me ? 'edit' : null}" -->
+          <!-- ko if: is_me -->
+          <a data-bind="text: name, click: $parent.editName"></a>
+          <!-- /ko -->
+          <!-- ko ifnot: is_me -->
+          <!--ko text: name--><!--/ko-->
+          <!-- /ko -->
+        </li>
+      </ul>
     </div>
   </div>
 
@@ -45,7 +54,8 @@
         <div data-role="tabs" id="tabs">
           <div data-role="navbar" class="poll-type-select">
             <ul>
-              <li><a href="#poll-type-item-choice" data-poll-type="item-choice" data-ajax="false" class="ui-btn-active">Item Choice</a></li>
+              <li><a href="#poll-type-item-choice" data-poll-type="item-choice" data-ajax="false" class="ui-btn-active">Item
+                Choice</a></li>
               <li><a href="#poll-type-range" data-poll-type="range" data-ajax="false">Range</a></li>
             </ul>
           </div>
