Deleting polls with knockout.

--- a/www/index.html
+++ b/www/index.html
@@ -148,7 +148,7 @@
           </div>
 
           <!-- ko if: ownPoll -->
-          <button class="delete-poll-button" data-theme="b">Delete Poll</button>
+          <button class="delete-poll-button" data-theme="b" data-bind="click: $parent.deletePollConfirm">Delete Poll</button>
           <!-- /ko -->
 
         </div>
