--- a/www/index.html
+++ b/www/index.html
@@ -137,14 +137,19 @@
             <table class="ui-table poll-results-summary-table">
               <tbody data-bind="foreach: details.items">
               <tr>
-                <td class="results-item" data-bind="text: $data"></td>
-                <td class="results-item-votes num">0</td>
+                <td data-bind="text: $data"></td>
+                <td class="num" data-bind="text: $parent.itemTot($data)"></td>
               </tr>
               </tbody>
             </table>
             <hr>
             <table class="ui-table poll-results-table">
-              <tbody></tbody>
+              <tbody data-bind="foreach: votes">
+              <tr>
+                <td data-bind="text: name"></td>
+                <td class="num" data-bind="text: $parent.haveIVoted() ? vote : '?'"></td>
+              </tr>
+              </tbody>
             </table>
             <!-- /ko -->
 
