--- a/www/index.html
+++ b/www/index.html
@@ -117,7 +117,7 @@
               <tbody data-bind="foreach: votes">
               <tr>
                 <td data-bind="text: name"></td>
-                <td class="num" data-bind="text: $parent.haveIVoted() ? vote.toFixed($parent.decimals) : '?'"></td>
+                <td class="num" data-bind="text: $parent.haveIVoted() ? vote.toFixed($parent.details.decimals) : '?'"></td>
               </tr>
               </tbody>
               <tfoot>
